--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "scripts": {
     "start": "node server.js",
     "lint": "eslint -c .eslintrc.json . --ext .js,.mjs",
-    "test": "npm run lint"
+    "test": "npm run lint && mocha --colors"
   },
   "dependencies": {
     "express": "^4.17.1"
@@ -44,7 +44,11 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "mocha": "^7.1.2",
+    "should": "^13.2.3",
+    "standard": "^14.3.4",
+    "supertest": "^4.0.2"
   },
   "private": true
 }
