--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -33,5 +33,5 @@ jobs:
         DEBUG: true
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         APP_SECRET: ${{ secrets.APP_SECRET }}
-        API_KEY: ${{ secrets.DB_API_KEY }}
+        API_KEY: ${{ secrets.API_KEY }}
         VALIDATION_TOKEN: ${{ secrets.VALIDATION_TOKEN }}
