docs: relicense codes [skip ci]

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "homepage": "https://dictionary.eidoriantan.tech",
   "bugs": "https://github.com/eidoriantan/messenger-dictionary/issues",
-  "license": "Apache-2.0",
+  "license": "GPL-3.0-only",
   "author": {
     "name": "Adriane Justine Tan",
     "email": "eidoriantan@gmail.com",
