--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "start": "node server.js",
     "lint": "eslint -c .eslintrc.json . --ext .js,.mjs",
     "commitlint": "git log -1 --format=%B | commitlint",
-    "test": "npm run lint && mocha --colors"
+    "test": "npm run lint && mocha"
   },
   "dependencies": {
     "express": "^4.17.1"
