--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "messenger-dictionary",
-  "version": "1.1.6",
+  "version": "1.2.0",
   "description": "Webhook for Messenger dictionary using Express",
   "keywords": [
     "node",
@@ -37,7 +37,8 @@
     "test": "npm run lint && mocha"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "serve-index": "^1.9.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
