--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "messenger-dictionary",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Webhook for Messenger dictionary using Express",
   "keywords": [
     "node",
@@ -37,6 +37,7 @@
     "test": "npm run lint && mocha"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "serve-index": "^1.9.1"
   },
